# SAITEC-Safeguard-Harness

./: AGENTS.md  README.md  fusion_result.json  pyproject.toml
configs/pipelines/: final-current-server.yaml  final.yaml  hierarchical_safety_v1.yaml  prod_v2.yaml  qwen3_5_4b_conflict_review.yaml  qwen3_5_4b_conflict_review_candidate_v10.yaml  qwen3_5_4b_conflict_review_candidate_v11.yaml  qwen3_5_4b_conflict_review_candidate_v14.yaml  qwen3_5_4b_conflict_review_candidate_v15.yaml  qwen3_5_4b_conflict_review_candidate_v16.yaml  qwen3_5_4b_conflict_review_candidate_v17.yaml  qwen3_5_4b_conflict_review_candidate_v18.yaml  qwen3_5_4b_conflict_review_candidate_v19.yaml  qwen3_5_4b_conflict_review_candidate_v2.yaml  qwen3_5_4b_conflict_review_candidate_v20.yaml  qwen3_5_4b_conflict_review_candidate_v21.yaml  qwen3_5_4b_conflict_review_candidate_v22.yaml  qwen3_5_4b_conflict_review_candidate_v23.yaml  qwen3_5_4b_conflict_review_candidate_v3.yaml  qwen3_5_4b_conflict_review_candidate_v4.yaml  qwen3_5_4b_conflict_review_candidate_v5.yaml  qwen3_5_4b_conflict_review_candidate_v6.yaml  qwen3_5_4b_conflict_review_candidate_v7.yaml  qwen3_5_4b_conflict_review_candidate_v8.yaml  qwen3_5_4b_conflict_review_candidate_v9.yaml  qwen3_5_4b_policy_intent_balanced.yaml  qwen3_5_4b_three_classifiers.yaml  qwen3_6_27b_lora_qwen3guard_conflict_review_candidate_v100_output_review.yaml  (+16 more)
data/: 样例数据-合并.json
models/: README.md  qwen36_model_lr.pth
tests/: test_core.py  test_datasets.py  test_evaluation_cli.py  test_methods.py  test_model_methods_config.py  test_pipeline.py  test_providers.py
(+53 files in other folders)
