[project]
name = "saitec-safeguard-harness"
version = "0.1.0"
description = "Configurable safety-classification harness for experiment and deployment workflows."
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
local-model = [
  "torch>=2.1",
  "transformers>=4.51",
  "accelerate>=0.27",
  "flash-linear-attention==0.4.2",
  "causal-conv1d>=1.4",
]

[project.scripts]
safeguard-harness = "safeguard_harness.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
